<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calTimer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tab3_activity_title"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timeHour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textStyle="normal|bold" />
        <TextView
            android:text="@string/tv_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:textStyle="normal|bold" />
        <TextView
            android:id="@+id/timeMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:textStyle="normal|bold" />
        <TextView
            android:text="@string/tv_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:textStyle="normal|bold" />
        <TextView
            android:id="@+id/timeSec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:textStyle="normal|bold" />
        <TextView
            android:text="@string/tv_spot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"

            android:textAlignment="center"
            android:textStyle="normal|bold" />
        <TextView
            android:id="@+id/timeMSec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

    </LinearLayout>
    <ListView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/lvWatchTimeList"
        >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/begin"
            android:id="@+id/btnSWStart"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="18sp" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop_waiting"
            android:id="@+id/btnSWPause"
            android:textAlignment="center"
            android:textSize="18sp" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/going_on"
            android:id="@+id/btnSWResume"
            android:textAlignment="center"
            android:textSize="18sp" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:id="@+id/btnSWReset"
            android:textSize="18sp"
            android:textAlignment="center" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/count_time"
            android:id="@+id/btnSWLap"
            android:textSize="18sp"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>