<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/tab2_listitem"
    android:layout_height="80dp"
    android:paddingRight="10dp"
    >
    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/timer"/>
    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/img1"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/countryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_name"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/today"
            android:textSize="12sp"
            android:textColor="@android:color/background_dark"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/timePlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textColor="@android:color/background_dark"
        android:text="@string/time_world"
        android:textSize="25sp"
        />
</RelativeLayout>