<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/secondTimer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tab4_play_title"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etHour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:singleLine="true"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_colon"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/etMin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:singleLine="true"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_colon"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/etSec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:singleLine="true"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/begin"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop_waiting"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnResume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/going_on"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>